@@ -56,6 +56,8 @@ GNU Zile NEWS                                    -*- outline -*-
   - `describe-function` now shows bound keys and function signatures
     in displayed help text.
 
+  - New `*Messages*` buffer accumulates minibuf messages.
+
 *** Zz
 
   - A new editor, currently heavily based on Zmacs, but with the zlisp
